Add proxynet option to support whitelist address
proxynet has higher priority than localnet

--- a/src/proxychains.conf
+++ b/src/proxychains.conf
@@ -68,6 +68,19 @@ remote_dns_subnet 224
 tcp_read_time_out 15000
 tcp_connect_time_out 8000
 
+### Examples for proxynet whitelist
+## all proxynet ranges will force using proxy to connect
+## proxynet has higher priority than localnet
+
+## Force connections to 192.168.1.0/24 with port 80 using proxy
+# proxynet 192.168.1.0:80/255.255.255.0
+
+## Force connections to 192.168.100.0/24 using proxy
+# proxynet 192.168.100.0/255.255.255.0
+
+## Force connections to ANYwhere with port 80 using proxy
+# proxynet 0.0.0.0:80/0.0.0.0
+
 ### Examples for localnet exclusion
 ## localnet ranges will *not* use a proxy to connect.
 ## Exclude connections to 192.168.1.0/24 with port 80
